--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
   copyright this course was learnt by siva in 2020 from udemy!!!!!
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I'm not sure what will go here but i'm sure it's going to change my life if I get job by dec 5...
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Devops enginner 2020</p>
 	</footer>
 </body>
 </html>
